new input file link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <H2>Data</H4>
 <UL>
-<LI><A HREF="/data/downloads/ftp.nextprot.org/pub/current_release/mapping/nextprot_geneid.txt">Input File</A>
+<LI><A HREF="/data/downloads/download.nextprot.org/pub/current_release/mapping/nextprot_geneid.txt">Input File</A>
 <LI><A HREF="/data/loads/nextprot/nextprotload/input/eg_nextprot.txt">Association File</A>
 </UL>
 
